# free_groups_26

./: .buildinfo  .gitignore  LICENSE  README.md  api.html  devenv.nix  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: sphinx.yml
_sources/: api.rst.txt  index.rst.txt
_sources/classes/: classes.rst.txt  free_group.rst.txt  letter.rst.txt  log.rst.txt  morphism.rst.txt  whitehead_graph.rst.txt  word.rst.txt
_sources/functionality/: bruteforce.rst.txt  bruteforce_orbit.rst.txt  free_group.rst.txt  functions.rst.txt  letter.rst.txt  whitehead_automorphism.rst.txt  word.rst.txt
_static/: documentation_options.js
classes/: classes.html  free_group.html  letter.html  log.html  morphism.html  whitehead_graph.html  word.html
docs/: Makefile  requirements.txt
docs/source/: api.rst  conf.py  index.rst
docs/source/classes/: classes.rst  free_group.rst  letter.rst  morphism.rst  word.rst
docs/source/functionality/: bruteforce.rst  bruteforce_orbit.rst  functions.rst  whitehead_automorphism.rst  whitehead_graph.rst  whitehead_minimization.rst  word.rst
functionality/: bruteforce.html  bruteforce_orbit.html  free_group.html  functions.html  letter.html  whitehead_automorphism.html  whitehead_graph.html  whitehead_minimization.html  word.html
src/free_groups_26/: __init__.py  aut_orbit_bruteforce.py  draw.py  free_group.py  letter.py  log.py  minimize_bruteforce.py  morphism.py  whitehead_automorphism.py  whitehead_graph.py  whitehead_minimization.py  word.py
tests/: test_reduction.py
