[build-system]
requires = [
    "hatchling >= 1.26", 
]
build-backend = "hatchling.build"

[project]
name = "free_groups_26"
version = "0.0.7"
dependencies = [
    "sortedcontainers >= 2.4.0",
]
authors = [
  { name="Sudhir Krisna", email="sudhcontent@gmail.com" },
]
description = "A Python Module for working with Free Groups"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.optional-dependencies]
docs = [
    "sphinx"
]

[project.urls]
Documentation = "https://www.sudhirkrisna.com/free_groups_26/"
Repository = "https://github.com/Sudhboi/free_groups_26"
Issues = "https://github.com/Sudhboi/free_groups_26/issues"
