[build-system]
requires = [
    "hatchling >= 1.26", 
]
build-backend = "hatchling.build"

[project]
name = "free_groups_26"
version = "1.0.0"
dependencies = [
    "sortedcontainers >= 2.4.0",
    "matplotlib >= 3.10.8",
    "networkx >= 3.6.1",
]
authors = [
  { name="Sudhir Krisna", email="sudhcontent@gmail.com" },
]
description = "A Python Module for working with Free Groups"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.optional-dependencies]
docs = [
    "sphinx"
]

[project.urls]
Documentation = "https://www.sudhirkrisna.com/free_groups_26/"
Repository = "https://github.com/Sudhboi/free_groups_26"
Issues = "https://github.com/Sudhboi/free_groups_26/issues"
